improved removal of duplicated groups

--- a/report3.html
+++ b/report3.html
@@ -69,14 +69,18 @@ img {
 <div id="TOC">
 <ul>
 <li><a href="#porownanie-wybranych-cech-aminokwasow">Porównanie wybranych cech aminokwasów</a></li>
+<li><a href="#wyniki-badan">Wyniki badań</a></li>
 </ul>
 </div>
 
 <div id="porownanie-wybranych-cech-aminokwasow" class="section level1">
 <h1>Porównanie wybranych cech aminokwasów</h1>
 <p>Narzędzie: <a href="https://michbur.shinyapps.io/propapp" class="uri">https://michbur.shinyapps.io/propapp</a></p>
+</div>
+<div id="wyniki-badan" class="section level1">
+<h1>Wyniki badań</h1>
 <!-- html table generated in R 3.2.1 by xtable 1.7-4 package -->
-<!-- Thu Jul  2 10:39:55 2015 -->
+<!-- Tue Jul  7 14:15:54 2015 -->
 <table border="1">
 <caption align="bottom">
 Wyniki pracy dla nowego algorytmu. Walidacja krzyżowa 5-krotna, 8 powtórzeń.
